improve overlap fixes

--- a/app/assets/stylesheets/deep-insights/themes/scss/map/_embed.scss
+++ b/app/assets/stylesheets/deep-insights/themes/scss/map/_embed.scss
@@ -133,8 +133,9 @@ $cEmbedTabs-Shadow: rgba(0, 0, 0, 0.24);
 }
 
 @media (max-width: $sMedia-l) {
-  .CDB-Map .CDB-Legends-canvas {
-    max-height: calc(100vh - 263px);
+  .CDB-Map .CDB-Legends-canvas,
+  .CDB-Map .CDB-Legends-canvasInner {
+    max-height: calc(100vh - 293px);
   }
 }
 
